# DataBridgeAnalyzer

./: .replit  README.md  app.py  crypto_analytics.db  pyproject.toml  replit.md  websocket_server.py
attached_assets/: Pasted-Prompt-for-Replit-AI-Project-Title-Real-Time-Quantitative-Analytics-Dashboard-for-Binance-Tick--1762096556238_1762096556239.txt  Pasted-ValueError-time-data-2025-11-02T14-03-38-671000-doesn-t-match-format-Y-m-dT-H-M-S-f-z-at-1762093080694_1762093080695.txt
modules/: alerts.py  analytics.py  backtesting.py  data_ingestion.py  database.py  resampler.py  ui_helpers.py
